--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "extends": [
         "@dzek69/eslint-config-base",
         "@dzek69/eslint-config-typescript"
@@ -9,13 +10,16 @@
     "parserOptions": {
         "sourceType": "module",
         "project": "./tsconfig.lint.json",
-        "extraFileExtensions": [".mjs"]
+        "extraFileExtensions": [
+            ".mjs"
+        ]
     },
     "ignorePatterns": [],
     "overrides": [
         {
             "files": [
-                "src/*.spec.*", "src/**/*.spec.*"
+                "src/*.spec.*",
+                "src/**/*.spec.*"
             ],
             "env": {
                 "jest": true
