--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "czas",
-  "version": "1.0.0-beta.4",
+  "version": "1.0.0-beta.5",
   "author": "Jacek Nowacki",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
-    "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials",
+    "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials --theme pages-plugin --includeVersion",
     "compile": "yarn compile:esm && yarn compile:cjs",
     "compile:esm": "rm -rf esm && tsc && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
@@ -13,7 +13,7 @@
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
-    "prepublishOnly": "yarn lint && yarn test && yarn docs",
+    "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
     "start:dev": "nodemon",
     "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
   },
@@ -24,7 +24,7 @@
     }
   },
   "main": "./dist/index.js",
-  "types": "./esm/index.d.js",
+  "types": "./esm/index.d.ts",
   "module": "./esm/index.js",
   "type": "module",
   "dependencies": {
@@ -35,21 +35,24 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@dzek69/eslint-config-base": "^2.0.0",
-    "@dzek69/eslint-config-typescript": "^0.2.2",
+    "@dzek69/eslint-config-base": "^2.1.0",
+    "@dzek69/eslint-config-typescript": "^0.4.0",
     "@types/node-schedule": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
-    "eslint": "^7.14.0",
+    "eslint": "^7.32.0",
     "fs-extra": "^9.0.1",
     "husky": "^4.3.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "mongodb": "^3.6.3",
     "must": "^0.13.4",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.20.4",
-    "typescript": "^4.1.3"
+    "typedoc": "^0.21.2",
+    "typescript": "^4.2.4",
+    "babel-plugin-module-extension": "^0.1.3",
+    "@types/jest": "^26.0.23",
+    "typedoc-plugin-pages-fork-fork": "^0.0.3"
   },
   "husky": {
     "hooks": {
@@ -57,8 +60,9 @@
     }
   },
   "libraryTemplate": {
-    "version": "0.0.2-beta.5",
+    "version": "3.3.2",
     "language": "typescript",
-    "fixDefaultForCommonJS": true
+    "fixDefaultForCommonJS": true,
+    "jsx": false
   }
 }
