--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czas",
-  "version": "1.0.0-beta.6",
+  "version": "1.1.0",
   "author": "Jacek Nowacki",
   "license": "MIT",
   "scripts": {
@@ -28,8 +28,8 @@
   "module": "./esm/index.js",
   "type": "module",
   "dependencies": {
-    "bottom-line-utils": "^0.12.0",
-    "node-schedule": "^1.3.2"
+    "bottom-line-utils": "^0.18.0",
+    "node-schedule": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -37,22 +37,22 @@
     "@babel/preset-typescript": "^7.12.7",
     "@dzek69/eslint-config-base": "^2.1.0",
     "@dzek69/eslint-config-typescript": "^0.4.0",
+    "@types/jest": "^26.0.23",
     "@types/node-schedule": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^7.32.0",
     "fs-extra": "^9.0.1",
     "husky": "^4.3.0",
-    "jest": "^27.0.6",
+    "jest": "^27.4.7",
     "mongodb": "^3.6.3",
     "must": "^0.13.4",
-    "nodemon": "^2.0.6",
+    "nodemon": "^2.0.15",
     "ts-node": "^9.0.0",
     "typedoc": "^0.21.2",
-    "typescript": "^4.2.4",
-    "babel-plugin-module-extension": "^0.1.3",
-    "@types/jest": "^26.0.23",
-    "typedoc-plugin-pages-fork-fork": "^0.0.3"
+    "typedoc-plugin-pages-fork-fork": "^0.0.3",
+    "typescript": "^4.2.4"
   },
   "husky": {
     "hooks": {
