--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czas",
-  "version": "1.2.0",
+  "version": "1.3.0-beta.1",
   "author": "Jacek Nowacki",
   "license": "MIT",
   "scripts": {
@@ -44,13 +44,13 @@
     "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^7.32.0",
     "fs-extra": "^9.0.1",
-    "husky": "^4.3.0",
-    "jest": "^27.4.7",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "mongodb": "^3.6.3",
     "must": "^0.13.4",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.18",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.21.2",
+    "typedoc": "^0.21.10",
     "typedoc-plugin-pages-fork-fork": "^0.0.3",
     "typescript": "^4.2.4"
   },
@@ -60,7 +60,7 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.4.0",
+    "version": "3.4.1",
     "language": "typescript",
     "fixDefaultForCommonJS": true,
     "jsx": false
